<resources>
    <string name="app_name">Talma</string>

    <!--Interfaz principal-->
    <string name="btn_login_cliente">LOGIN CLIENTE</string>
    <string name="btn_login_empleado">LOGIN EMPLEADO</string>

    <!--Login de clientes-->
    <string name="login_titulo2">Clientes</string>

    <!--Dialogo Fail Login-->
    <string name="FailLogin">No se pudo iniciar sesion, vuelva a intentarlo</string>
    <string name="ok_fail_login">Entendido</string>

    <!--Main Cliente-->

    <!--Pedidos-->
    <string name="real_pedido">Pedidos</string>
    <!--Reclamos-->
    <string name="reclamos">Reclamos</string>
    <string name="reclamo">Reclamo</string>
    <string name="Rsir_2">Rsir</string>
    <string name="Estado">Estado</string>
    <string name="complete">Escribanos sus motivos del reclamo</string>

    <!--Rsirs-->
    <string name="Rsires">Rsire</string>


    <!--Login de empleados-->
    <string name="login_titulo">Empleados de Talma</string>
    <string name="emailLogin">Correo electronico</string>
    <string name="Passwordlogin">Contraseña</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="btnIngresarGoogle">Ingresar con Google</string>

    <!--Menu de navegacion-->
    <string name="nav_perfil">Perfil</string>
    <string name="nav_usuarios">Usuarios</string>
    <string name="nav_RSIRe">RSIRe</string>
    <string name="nav_notificaciones">Notificaciones</string>

    <!--Menu de navegacion cliente-->
    <string name="nav_reclamos">Reclamaciones</string>
    <string name="nav_facturas">Facturas</string>
    <string name="nav_serv">Servicios</string>
    <string name="nav_pedidos">Pedir</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--RSIRe Fragment-->
    <string name="btn_Registrar_Rsire">Registrar RSIRe</string>
    <string name="btn_revisar_servicios">Revisar Servicios</string>
    <string name="btn_atender_reclamos">Atender Reclamos</string>
    <string name="btn_facturacion">Facturacion</string>
    <string name="Rsire_titulo">RSIRe</string>

    <!--Registro de RSIRe-->
    <string name="txt_registro">Registro de RSIRe</string>
    <string name="txt_codigo_rsir">Codigo</string>
    <string name="txt_datos_generales">Datos Generales de Vuelo</string>
    <string name="txt_datos_llegada">Datos de Llegada</string>
    <string name="txt_datos_salida">Datos de Salida</string>
    <string name="txt_aeropueto">Aeropuerto </string>
    <string name="txt_compañia">Compañia</string>
    <string name="txt_email_cliente">Correo electronico del cliente</string>
    <string name="txt_origen">Origen</string>
    <string name="txt_destino">Destino</string>
    <string name="txt_aeronave">Aeronave </string>
    <string name="txt_matricula">Matricula</string>
    <string name="txt_peso">Peso (kg)</string>
    <string name="txt_a_cargo_de">A cargo de</string>
    <string name="txt_area">Area: </string>
    <string name="txt_fecha">Fecha dd/mm/yyyy</string>
    <string name="txt_hora">Hora hh:mm</string>
    <string name="txt_nvuelo">N° vuelo</string>
    <string name="txt_pea">PEA</string>
    <string name="btn_siguiente">EDITAR DATOS GENERALES</string>
    <string name="tv_aeropuerto">Aeropuerto</string>
    <string name="tv_tipo_aeronave">Tipo aeronave</string>
    <string name="tv_fechas">dd/mm/yyyy - dd/mm/yyyy</string>
    <string name="tv_compañia">Compañia </string>
    <string name="tv_matricula">Matricula </string>
    <string name="tv_origen_destino">Origen - Destino</string>

    <!--Registro de servicio-->
    <string name="btn_agregar">Agregar servicio</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="tv_nombre_servicio">Nombre</string>
    <string name="tv_hora">hh:hh - hh:mm</string>
    <string name="tv_guion"> - </string>
    <string name="tv_codigo">Codigo </string>
    <string name="tv_cantidad_total_servicios">00</string>
    <string name="btn_editar_rsire">Editar Rsir </string>

    <!--Agregar de servicio-->
    <string name="txt_agregar_servicio">Agregar servicio</string>
    <string name="txt_nombre_servicio">Nombre: </string>
    <string name="txt_subtipo_servicio">Subtipo: </string>
    <string name="txt_Codigo">Codigo </string>
    <string name="btn_guardar_servicio">Guardar</string>
    <string name="txt_hora_desde">Hora desde hh:mm</string>
    <string name="txt_hora_hasta">Hora hasta hh:mm</string>
    <string name="txt_cantidad">Cantidad</string>
    <string name="txt_cantidad_total">Cantidad Total: </string>
    <string name="cantidad_total">--</string>

    <!--Revisar Servicios-->
    <string name="BuscarRSIR">Buscar RSIR</string>
    <string name="tv_area">Area</string>
    <string name="tv_compañia2">Compañia: </string>
    <string name="tv_origen">Origen: </string>
    <string name="tv_destino">Destino: </string>
    <string name="tv_aeronaves">Aeronave: </string>
    <string name="tv_matricula2">Matricula: </string>
    <string name="tv_a_cargo_de">A cargo de: </string>
    <string name="tv_fecha_llegada">Fecha: </string>
    <string name="tv_hora2">Hora: </string>
    <string name="tv_nvuelo">N° vuelo: </string>
    <string name="tv_pea">PEA: </string>
    <string name="tv_lista_servicios">Lista de servicios </string>

    <!--Atención de reclamos-->
    <string name="ar_col1">RSIR</string>
    <string name="ar_col2">Cliente</string>
    <string name="ar_col3">Estado</string>
    <string name="fila1_RSIR">1001</string>
    <string name="fila1_Cliente">C141</string>
    <string name="fila1_Estado">En Reclamo</string>
    <string name="fila2_RSIR">1002</string>
    <string name="fila2_Cliente">C102</string>
    <string name="fila2_Estado">Normal</string>
    <string name="fila3_RSIR">1003</string>
    <string name="fila3_Cliente">C201</string>
    <string name="fila3_Estado">Reclamo atendido</string>
    <string name="fila4_RSIR">1004</string>
    <string name="fila4_Cliente">C136</string>
    <string name="fila4_Estado">Normal</string>
    <string name="fila5_RSIR">1005</string>
    <string name="fila5_Cliente">C162</string>
    <string name="fila5_Estado">En reclamo</string>

    <!--Realizar Pedido-->
    <string name="btn_realizar_pedido">Realizar pedido</string>
    <string name="txt_realizar_pedido">Realizar pedido</string>
    <string name="txt_tipo_servicio">Tipo de Servicio:</string>


    <!--Validar Servicios-->
    <string name="btn_validar_servicio">Validar sevicio</string>
    <string name="tv_estado_rsir">Estado</string>


    <!--Validar Servicios-->
    <string name="btn_realizar_reclamo">Realizar Reclamo</string>
    <string name="btn_rsir_pendientes">RSIR Pendientes</string>
    <string name="btn_rsir_validados">RSIR Validados</string>

    <!--Boton Facturacion-->
    <string name="btn_mis_facturas">Mis Facturas</string>

    <string name="btn_cerrar_sesion">Cerrar Sesión</string>

    <!--Boton Registro de clientes-->
    <string name="btn_fecha_registro_clientes">Fecha de registro</string>

    <!--Boton Registro de clientes-->
    <string name="btn_fecha_registro_empleados">Fecha de registro</string>

    <!--Nueva factura-->
    <string name="et_RSIR">RSIR</string>
    <string name="et_encargado_facturacion">Encargado de facturación</string>
    <string name="btn_fecha_emision">Fecha de emisión</string>

    <string name="tv_Servicios">Servicios</string>
    <string name="tv_Precio">Precio</string>
    <string name="btn_registrar_factura">Registrar</string>




</resources>