<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="3dp"
    app:cardBackgroundColor="#fff"
    android:outlineAmbientShadowColor="@color/black"
    app:cardUseCompatPadding="true">

    <!--Datos del RSIRe-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Codigo-->
                <TextView
                    android:id="@+id/tv_codigo_rsir"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_codigo"
                    android:layout_marginStart="5dp"
                    android:textColor="#000" />

                <!--Tipo aeronave-->
                <TextView
                    android:id="@+id/tv_tipo_aeronave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/tv_tipo_aeronave"
                    android:textColor="#000" />

                <!--Fechas-->
                <TextView
                    android:id="@+id/tv_fechas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_fechas"
                    android:layout_marginStart="210dp"
                    android:textColor="#000" />

            </RelativeLayout>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!--Estado-->
                <TextView
                    android:id="@+id/tv_estado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_estado_rsir"
                    android:layout_marginStart="5dp"
                    android:textColor="#000" />

                <!--Area-->
                <TextView
                    android:id="@+id/tv_area"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:text="@string/tv_area"
                    android:textColor="#000" />

                <!--Origen-Destion-->
                <TextView
                    android:id="@+id/tv_origen_destino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="210dp"
                    android:text="@string/tv_origen_destino"
                    android:textColor="#000" />

            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>