<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".RegistrarRsireFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <!--Titulo-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/txt_registro"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!--Imagen-->
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:src="@drawable/registro"
            android:layout_marginBottom="15dp"/>

        <!--Datos generales del vuelo-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="15dp">

        <!--Titulo-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_datos_generales"
            android:textColor="#000"
            android:textSize="18sp" />

        <!--Aeropuerto-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_aeropueto"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#2B2B2B"/>

            <Spinner
                android:id="@+id/sp_aeropuertos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Compañia-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_compañia"
                android:hint="@string/txt_compañia"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Origen-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_origen"
                android:hint="@string/txt_origen"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Destino-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_destino"
                android:hint="@string/txt_destino"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Aeronaves-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_aeronave"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#000"/>

            <Spinner
                android:id="@+id/sp_aeronaves"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Matricula-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_matricula"
                android:hint="@string/txt_matricula"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Forma de Pago-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_pago"
                android:layout_weight="2"
                android:textSize="17sp"
                android:textColor="#000"/>

            <Spinner
                android:id="@+id/sp_pagos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--A cargo de-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_a_cargo_de"
                android:hint="@string/txt_a_cargo_de"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Datos de llegada-->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_marginBottom="15dp">

        !--Titulo-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_datos_llegada"
            android:textColor="#000"
            android:textSize="18sp"/>

        <!--Fecha-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/et_fecha_llegada"
                android:hint="@string/txt_fecha"
                android:inputType="date"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--Hora-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_hora_llegada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_hora"
                android:importantForAutofill="no"
                android:inputType="time"
                android:textColorHint="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <!--N° vuelo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_nvuelo_llegada"
                android:hint="@string/txt_nvuelo"
                android:inputType="number"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--N° vuelo-->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_pea_llegada"
                android:hint="@string/txt_pea"
                android:inputType="textCapWords"
                android:textColorHint="#000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"/>

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>

        <!--Datos de salida-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_marginBottom="15dp">

            !--Titulo-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_datos_salida"
                android:textColor="#000"
                android:textSize="18sp" />

            <!--Fecha-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/et_fecha_salida"
                    android:hint="@string/txt_fecha"
                    android:inputType="date"
                    android:textColorHint="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--Hora-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_hora_salida"
                    android:hint="@string/txt_hora"
                    android:inputType="time"
                    android:textColorHint="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--N° vuelo-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_nvuelo_salida"
                    android:hint="@string/txt_nvuelo"
                    android:inputType="number"
                    android:textColorHint="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

            <!--N° vuelo-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/et_pea_salida"
                    android:hint="@string/txt_pea"
                    android:inputType="textCapWords"
                    android:textColorHint="#000"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"/>

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btn_siguiente"
            android:text="@string/btn_siguiente"
            android:background="@drawable/btn_personalizado"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/teal_700"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>